# mac-storage-analyzer

./: .gitignore  CLAUDE.md  README.md  analyzer.py  categories.py  display.py  pyproject.toml  recommender.py  scanner.py
tests/: test_recommender.py  test_scanner.py
