[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-storage-analyzer"
version = "1.0.0"
description = "Developer-aware Mac storage analyzer with actionable cleanup recommendations"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
mac-storage-analyzer = "analyzer:main"
